# synnoesis

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  RULES-OF-ENGAGEMENT.md  index.js  package.json  pyproject.toml  requirements.txt  synnoesis.py
comms/: agent.py  doctor.py  fingerprint.py  inbox.py  keygen.py  keyring.py  listen.py  mqtt.py  paths.py  presence.py  send.py  sign.py  who.py  wire.py
compose/: docker-compose.yml  mosquitto.conf.example
docs/: CNAME  index.html  quickstart.md
examples/: agent.example.json  arbiter.md  proposer.md  skeptic.md
synnoesis/: __init__.py  __main__.py  cli.py
tests/: test_agent.py  test_dispatch_contract_roundtrip.py  test_enforce_read_side.py  test_enforce_unavailable_fails_loud.py  test_floor_runs_paho_absent.py  test_installed_console_roundtrip.py  test_keydist_slice1.py  test_keygen_keyring_roundtrip.py  test_listen_process.py  test_local_send_roundtrip.py  test_mqtt_security_floor.py  test_outer_record_contract.py  test_paths_resolves.py  test_presence.py  test_roundtrip_mqtt.py  test_sign_verify_floor.py  test_single_module_identity.py  test_version_consistency.py
tools/: release-gate.py
