[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "synnoesis"
version = "0.4.0"
description = "A personal-assistant system where multiple AI agents confer and collaborate to solve problems together."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Groupe Kioptix Inc." }]
keywords = ["ai", "agents", "multi-agent", "assistant", "orchestration", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://synnoesis.dev"
Repository = "https://github.com/kioptix/synnoesis"
Issues = "https://github.com/kioptix/synnoesis/issues"

[project.optional-dependencies]
# Opt-in extras. The BARE install stays dependency-free (the file floor needs nothing),
# so a single-machine floor never fails to build. Both cryptography and paho-mqtt ship
# prebuilt wheels on Python 3.10+ (no source build), so the extras install cleanly.
#   signing — Ed25519 message signing/verification (unsigned warn-mode without it).
#   mqtt    — cross-machine transport; INCLUDES cryptography, because locally verifying
#             a message received over an UNTRUSTED broker is the whole point of going
#             cross-machine. Shipping mqtt without signing would be secure-by-omission.
#   all     — everything.
signing = ["cryptography"]
mqtt = ["paho-mqtt>=2.0", "cryptography"]
all = ["paho-mqtt>=2.0", "cryptography"]

[project.scripts]
synnoesis = "synnoesis.cli:main"

[tool.setuptools]
packages = ["synnoesis"]
